--- a/razor-pay-clone/style.css
+++ b/razor-pay-clone/style.css
@@ -1,4 +1,76 @@
-.test {
-  text-align: center; }
+body {
+  background-color: #030C2B;
+  margin: 0; }
+
+.btn-blue {
+  background-color: #3594FA;
+  border: none;
+  outline: none; }
+
+.btn-trial {
+  background-color: #3395ff;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 3px;
+  font-size: 14px;
+  text-decoration: none;
+  margin-left: 20px;
+  font-weight: bold; }
+
+.float-header {
+  font-family: 'Helvatica',sans-serif;
+  background-color: #ffff;
+  display: block;
+  text-align: center;
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  position: fixed; }
+  .float-header .triangle-topleft {
+    width: 0;
+    height: 0;
+    border-top: 100px solid red;
+    border-right: 100px solid transparent; }
+  .float-header .text-lg {
+    display: none; }
+  .float-header .text-sm {
+    font-size: 14px; }
+  .float-header .content {
+    padding-left: 1rem;
+    display: inline-block;
+    font-size: 18px;
+    color: #205EA8;
+    font-weight: 500; }
+  .float-header .actions {
+    display: inline-block; }
+  .float-header .timer {
+    display: none;
+    padding-right: 1rem;
+    border-right: 1px solid #97BEF9;
+    vertical-align: middle; }
+    .float-header .timer .col {
+      display: inline-block;
+      vertical-align: top;
+      color: #0054A2;
+      font-size: 14px; }
+      .float-header .timer .col .time {
+        font-weight: 900; }
+      .float-header .timer .col .text {
+        padding-top: 2px;
+        text-align: center;
+        font-size: 12px;
+        font-weight: 300; }
+
+@media screen and (min-width: 375px) {
+  .float-header .content .text-sm {
+    font-size: 18px; } }
+@media screen and (min-width: 1024px) {
+  .float-header .content .text-lg {
+    display: inline-block;
+    font-size: 18px; }
+  .float-header .content .text-sm {
+    display: none; }
+  .float-header .timer {
+    display: inline-block; } }
 
 /*# sourceMappingURL=style.css.map */
